--- a/themes/tiansky/languages/zh-CN.yml
+++ b/themes/tiansky/languages/zh-CN.yml
@@ -22,7 +22,7 @@ menu:
 social: 社交
 powered:
     first: 本博客由
-    last: "强力驱动 | 主题"
+    last: 构建
 current_page: 当前位置
 page_name:
     categories: （分类目录）
