--- a/themes/tiansky/languages/zh-TW.yml
+++ b/themes/tiansky/languages/zh-TW.yml
@@ -22,7 +22,7 @@ menu:
 social: 社交
 powered:
     first: 本站使用
-    last: "建置 | 主題"
+    last: 建置
 current_page: 當前位置
 page_name:
     categories: （分類目錄）
